Add Role for Navbar
Add Role for Navbar

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@nuxtjs/toast": "^3.3.1",
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.10.5",
+    "jwt-decode": "^3.1.2",
     "node-fetch": "^3.3.1",
     "nuxt-tailvue": "^1.0.95",
     "sweetalert2": "^11.7.12",
