Add New Project
Add New Project

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,16 +14,22 @@
     "nuxt": "^3.5.2"
   },
   "dependencies": {
+    "@blowstack/ckeditor-nuxt": "^0.6.0",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/google-fonts": "^3.0.1",
     "@nuxtjs/toast": "^3.3.1",
+    "@tinymce/tinymce-vue": "^5.1.0",
+    "@tui-nuxt/editor": "^1.0.0-beta.3",
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.10.5",
+    "formiojs": "^4.14.13",
     "jwt-decode": "^3.1.2",
     "node-fetch": "^3.3.1",
     "nuxt-tailvue": "^1.0.95",
     "sweetalert2": "^11.7.12",
     "url-join": "^5.0.0",
+    "vue-formio": "^4.0.8",
+    "vue-router": "^4.2.2",
     "vue-toasted": "^1.1.28"
   }
 }
