--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@blowstack/ckeditor-nuxt": "^0.6.0",
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/composition-api": "^0.33.1",
     "@nuxtjs/google-fonts": "^3.0.1",
     "@nuxtjs/toast": "^3.3.1",
     "@tinymce/tinymce-vue": "^5.1.0",
