--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,13 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
-    "@types/node": "^18",
+    "@types/node": "^18.17.3",
+    "naive-ui": "^2.34.4",
     "nuxt": "^3.5.3"
   },
   "dependencies": {
     "@blowstack/ckeditor-nuxt": "^0.6.0",
     "@nuxtjs/axios": "^5.13.6",
-    "@nuxtjs/composition-api": "^0.33.1",
     "@nuxtjs/google-fonts": "^3.0.1",
     "@nuxtjs/prismic": "^3.0.1",
     "@nuxtjs/toast": "^3.3.1",
