--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@css-render/vue3-ssr": "^0.15.12",
     "@nuxt/devtools": "latest",
     "@types/node": "^18.17.3",
     "naive-ui": "^2.34.4",
