--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -16,7 +16,7 @@ FROM base AS prod-deps
 RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --prod
 
 # pack image
-FROM base
+FROM gcr.io/distroless/nodejs20:nonroot
 
 ARG	timezone=Asia/Bangkok
 
@@ -25,8 +25,9 @@ ENV LC_ALL C.UTF-8
 ENV TZ $timezone
 
 COPY --from=prod-deps /app/node_modules /app/node_modules
+COPY --from=base /app /app
 VOLUME [ "/app/uploads" ]
 
 EXPOSE 8090
 
-CMD [ "pnpm", "server.js" ]
+CMD [ "server.js" ]
