--- a/.env.example
+++ b/.env.example
@@ -11,5 +11,5 @@ DB_PORT=5432
 
 # frontend
 NUXT_BASE_API_URL="https://api.your.domain/"
-NUXT_TOKEN_API="http://TOKEN_API%3E:8090/"
+NUXT_TOKEN_API="http://TOKEN_API>:8090/"
 NUXT_EDITOR_TOKEN="Your Token Secret"
