--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,8 @@ x-frontend-env: &frontend-env
 services:
   backend:
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
     restart: unless-stopped
     build:
       context: ./backend
@@ -36,7 +37,8 @@ services:
 
   frontend:
     depends_on:
-      - backend
+      backend:
+        condition: service_started
     restart: unless-stopped
     build:
       context: ./frontend
@@ -51,6 +53,11 @@ services:
     restart: unless-stopped
     environment:
       <<: [*default-env, *postgres-env]
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready", "-U $$POSTGRES_USER"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     volumes:
       - postgres-data:/var/lib/postgresql/data
 
