--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,14 @@
 # app
+TZ="Asia/Bangkok"
 NODE_ENV="production"
 TOKEN_SECRET="Your Token Secret"
 
+# database
+POSTGRES_USER="postgres"
+POSTGRES_PASSWORD="Your DB Secret"
+
 # backend
+API_PORT=8090
 DB_USER="postgres"
 DB_HOST="postgres"
 DB_NAME="postgres"
@@ -12,4 +18,4 @@ DB_PORT=5432
 # frontend
 NUXT_BASE_API_URL="https://api.your.domain/"
 NUXT_TOKEN_API="http://TOKEN_API>:8090/"
-NUXT_EDITOR_TOKEN="Your Token Secret"
+NUXT_EDITOR_TOKEN="Your Editor token"
