--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,6 @@ DB_PASSWORD="Your DB Secret"
 DB_PORT=5432
 
 # frontend
-NUXT_BASE_API_URL="https://api.your.domain/"
+NUXT_PUBLIC_BASE_API_URL="https://api.your.domain/"
 NUXT_TOKEN_API="http://TOKEN_API>:8090/"
-NUXT_EDITOR_TOKEN="Your Editor token"
+NUXT_PUBLIC_EDITOR_TOKEN="Your Editor token"
