--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,6 +8,7 @@ ENV PNPM_HOME="/pnpm"
 ENV PATH="$PNPM_HOME:$PATH"
 
 RUN corepack enable
+RUN apt-get update && apt-get -y install git
 COPY . /app
 WORKDIR /app
 
@@ -19,15 +20,20 @@ RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --prod
 FROM gcr.io/distroless/nodejs20:nonroot
 
 ARG	timezone=Asia/Bangkok
+ARG node_env=production
 
 ENV LANG C.UTF-8
 ENV LC_ALL C.UTF-8
 ENV TZ $timezone
+ENV NODE_ENV $node_env
+
+WORKDIR /app
 
 COPY --from=prod-deps /app/node_modules /app/node_modules
 COPY --from=base /app /app
+
 VOLUME [ "/app/uploads" ]
 
 EXPOSE 8090
 
-CMD [ "server.js" ]
+CMD [ "/app/server.js" ]
