--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,29 +11,28 @@
   "devDependencies": {
     "@css-render/vue3-ssr": "^0.15.12",
     "@nuxt/devtools": "latest",
-    "@types/node": "^18.17.3",
+    "@types/node": "^20.5.7",
     "naive-ui": "^2.34.4",
-    "nuxt": "^3.5.3"
+    "nuxt": "^3.7.0"
   },
   "dependencies": {
     "@blowstack/ckeditor-nuxt": "^0.6.0",
+    "@hennge/vue3-pagination": "^1.0.17",
     "@nuxtjs/axios": "^5.13.6",
-    "@nuxtjs/google-fonts": "^3.0.1",
+    "@nuxtjs/google-fonts": "^3.0.2",
     "@nuxtjs/prismic": "^3.0.1",
     "@nuxtjs/toast": "^3.3.1",
-    "@tinymce/tinymce-vue": "^5.1.0",
-    "@tui-nuxt/editor": "^1.0.0-beta.3",
-    "bootstrap": "^5.3.0",
+    "@tinymce/tinymce-vue": "^5.1.1",
+    "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.10.5",
-    "formiojs": "^4.14.13",
+    "defu": "^6.1.2",
+    "formiojs": "^4.16.0",
     "jwt-decode": "^3.1.2",
-    "node-fetch": "^3.3.1",
+    "node-fetch": "^3.3.2",
     "nuxt-tailvue": "^1.0.95",
-    "sweetalert2": "^11.7.12",
+    "sweetalert2": "^11.7.27",
     "url-join": "^5.0.0",
-    "vue-formio": "^4.0.8",
-    "vue-router": "^4.2.2",
-    "vue-toasted": "^1.1.28",
-    "vue3-pagination": "^1.0.16"
+    "vue-router": "^4.2.4",
+    "vue-toasted": "^1.1.28"
   }
 }
