--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,36 @@
 x-user: &user
   user: "${UID}:${GID}"
-x-default: &deafult-env
+x-default: &default-env
   TZ: Asia/Bangkok
-x-pgsql: &pgsql-env
-  POSTGRES_PASSWORD: "Your DB Secret"
-  # POSTGRES_USER:
+x-postgres: &postgres-env
+  POSTGRES_USER: "${DB_USER}"
+  POSTGRES_PASSWORD: "${DB_PASSWORD}"
 x-app-env: &app-env
-  TOKEN_SECRET: "Your Token Secret"
-  NODE_ENV: "development"
+  NODE_ENV: "${NODE_ENV}"
+  TOKEN_SECRET: "${TOKEN_SECRET}"
 x-backend-env: &backend-env
-  user: "postgres"
-  host: "pgsql"
-  database: "postgres"
-  password: "Your DB Secret"
-  port: 5432
+  API_PORT: "${API_PORT}"
+  DB_USER: "${DB_USER}"
+  DB_HOST: "${DB_HOST}"
+  DB_NAME: "${DB_NAME}"
+  DB_PASSWORD: "${DB_PASSWORD}"
+  DB_PORT: ${DB_PORT}
 x-frontend-env: &frontend-env
-  NUXT_BASE_API_URL: "http://localhost:8090/"
-  NUXT_TOKEN_API: "http://backend:8090/"
+  NUXT_PUBLIC_BASE_API_URL: "${NUXT_PUBLIC_BASE_API_URL}"
+  NUXT_TOKEN_API: "${NUXT_TOKEN_API}"
+  NUXT_PUBLIC_EDITOR_TOKEN: "${NUXT_PUBLIC_EDITOR_TOKEN}"
 
 services:
   backend:
     depends_on:
-      - pgsql
+      postgres:
+        condition: service_healthy
     restart: unless-stopped
     build:
       context: ./backend
       dockerfile: Dockerfile
     environment:
-      <<: [*deafult-env, *app-env, *backend-env]
+      <<: [*default-env, *app-env, *backend-env]
     volumes:
       - ./backend/uploads:/app/uploads
     ports:
@@ -35,18 +38,29 @@ services:
 
   frontend:
     depends_on:
-      - backend
+      backend:
+        condition: service_started
     restart: unless-stopped
     build:
       context: ./frontend
       dockerfile: Dockerfile
     environment:
-      <<: [*deafult-env, *app-env, *frontend-env]
+      <<: [*default-env, *app-env, *frontend-env]
     ports:
       - 3000:3000
 
-  pgsql:
+  postgres:
     image: postgres
     restart: unless-stopped
     environment:
-      <<: [*deafult-env, *pgsql-env]
+      <<: [*default-env, *postgres-env]
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U $${POSTGRES_USER}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+
+volumes:
+  postgres-data:
