--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # app
 TZ="Asia/Bangkok"
-NODE_ENV="production"
+NODE_ENV="development"
 TOKEN_SECRET="Your Token Secret"
 
 # database
@@ -16,6 +16,6 @@ DB_PASSWORD="Your DB Secret"
 DB_PORT=5432
 
 # frontend
-NUXT_PUBLIC_BASE_API_URL="https://api.your.domain/"
+NUXT_PUBLIC_BASE_API_URL="http://localhost:8090/"
 NUXT_TOKEN_API="http://TOKEN_API>:8090/"
 NUXT_PUBLIC_EDITOR_TOKEN="Your Editor token"
