♻️ backend to typescript

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -12,9 +12,14 @@ RUN apt-get update && apt-get -y install git
 COPY . /app
 WORKDIR /app
 
+# build script
+FROM base AS builder
+RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --frozen-lockfile
+RUN pnpm build
+
 # get dependencies stage
 FROM base AS prod-deps
-RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --prod
+RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --prod --frozen-lockfile
 
 # pack image
 FROM gcr.io/distroless/nodejs20:nonroot
@@ -32,10 +37,10 @@ WORKDIR /app
 WORKDIR /app
 
 COPY --from=prod-deps /app/node_modules /app/node_modules
-COPY --from=base /app /app
+COPY --from=builder /app/dist/ /app
 
 VOLUME [ "/app/uploads" ]
 
 EXPOSE 8090
 
-CMD [ "/app/server.js" ]
+CMD [ "/app/index.js" ]
