--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Nuxt dev/build outputs
 .output
 .nuxt
+dist
 
 # Node dependencies
 node_modules
@@ -16,4 +17,3 @@ logs
 .env.*
 .env
 !.env.example
-
