--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@
 TZ="Asia/Bangkok"
 NODE_ENV="development"
 TOKEN_SECRET="Your Token Secret"
+APP_DOMAIN="localhost"
 
 # database
 POSTGRES_USER="postgres"
@@ -16,6 +17,6 @@ DB_PASSWORD="Your DB Secret"
 DB_PORT=5432
 
 # frontend
-NUXT_PUBLIC_BASE_API_URL="http://localhost:8090/"
+NUXT_PUBLIC_BASE_API_URL="http://api.localhost:8090/"
 NUXT_TOKEN_API="http://TOKEN_API>:8090/"
 NUXT_PUBLIC_EDITOR_TOKEN="Your Editor token"
